# sdl3_template_project

./: CMakeLists.txt
include/: config.h
src/: main.cpp
